--- a/index2.html
+++ b/index2.html
@@ -19,7 +19,7 @@
   <body>
     <div class="container-fluid">
 
-      <nav class="navbar navbar-masthead navbar-fixed-top clearfix">
+      <nav class="navbar clearfix">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar1" aria-expanded="false">
