Added info to about page

--- a/about.html
+++ b/about.html
@@ -40,7 +40,8 @@
         </div>
       </nav>
 
- 
+      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my persue in knowledge under the computer science field</p> 
+
       </div>          
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
