--- a/about.html
+++ b/about.html
@@ -40,7 +40,9 @@
         </div>
       </nav>
 
-      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my persue in knowledge under the computer science field</p> 
+      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my persue in knowledge under the computer science field. </p>
+      
+      <img src="essence.jpg" width="384" height="256"> 
 
       </div>          
     </div>
