Used bootstrap to make image responsive and rounded the edge

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
       <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my persue in knowledge under the computer science field. </p>
       
-      <img src="essence.jpg" width="364" height="236"> 
+      <img src="essence.jpg" class="img-responsive img-rounded"> 
 
       </div>          
     </div>
