--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
             <p class="navbar-brand">Welcome Luis</p>
           </div>
           <div class="collapse navbar-collapse" id="navbar1">
-            <ul class="nav masthead-nav navbar-right">
+            <ul class="nav masthead-nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
@@ -40,7 +40,7 @@
         </div>
       </nav>
 
-      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my persue in knowledge under the computer science field. </p>
+      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my pursue in knowledge under the computer science field. </p>
       
       <img src="essence.jpg" class="img-responsive img-rounded"> 
 
