--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Custom CSS -->
     <link href="cover.css" rel="stylesheet">
-  
+
   </head>
   <body>
     <div class="container-fluid">
@@ -32,7 +32,7 @@
             <p class="navbar-brand">Welcome Luis</p>
           </div>
           <div class="collapse navbar-collapse" id="navbar1">
-            <ul class="nav masthead-nav navbar-right">
+            <ul class="nav masthead-nav">
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About</a></li>
             </ul>
@@ -40,7 +40,7 @@
         </div>
       </nav>
 
-      <div>
+      <div style="float:left;width:auto;padding-right:100px">
         <h1 class="cover-heading">Lets get browsing</h1>
             
         <p> 
@@ -57,7 +57,7 @@
         </p>
 
       </div>       
-      <div>
+      <div style="width:auto;">
         <h1 class="cover-heading">Lets get Viewing</h1>
 
         <p> 
