--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <p class="navbar-brand">Welcome Luis</p>
+            <a class="navbar-brand" href="index.html">Welcome Luis</a>
           </div>
           <div class="collapse navbar-collapse" id="navbar1">
             <ul class="nav masthead-nav">
