Grammer fixes and created a readme

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </div>
       </nav>
 
-      <p> My name is Luis, this is just a starter page for my personal use containing websites that i browse frequenly. I'm currently a graduate student continuing my pursue in knowledge under the computer science field. </p>
+      <p> My name is Luis, this is just a starter page for my personal use containing websites that I browse frequently. I'm currently a graduate student pursuing further knowledge within computer science. </p>
       
       <img src="essence.jpg" class="img-responsive img-rounded"> 
 
