Matched casing on all headers

--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       </nav>
 
       <form>
-        <h1 class="cover-heading">Search the WWWs</h1>
+        <h1 class="cover-heading">Search The WWWs</h1>
         <input type="text" id="webSearch" value="">
         <input type="button" value="Search" onclick="searchTheWeb()" />
         <input type="submit" style="display: none" onclick="searchTheWeb()" />
       </form>
 
       <div style="float:left;width:auto;padding-right:100px">
-        <h1 class="cover-heading">Lets get browsing</h1>
+        <h1 class="cover-heading">Lets Get Browsing</h1>
             
         <p> 
           <a href="https://www.reddit.com/r/Android">Android</a> 
@@ -65,7 +65,7 @@
 
       </div>       
       <div style="float:left;width:auto;padding-right:100px">
-        <h1 class="cover-heading">Lets get Viewing</h1>
+        <h1 class="cover-heading">Lets Get Viewing</h1>
 
         <p> 
           <a href="https://www.youtube.com/feed/subscriptions">Youtube Subscription</a> 
@@ -76,7 +76,7 @@
 
       </div>    
       <div style="float:left;width:auto;">
-        <h1 class="cover-heading">Work?!</h1>
+        <h1 class="cover-heading">Lets Get Working?!</h1>
 
         <p> 
           <a href="https://rmedinahu.github.io/">Medina</a> 
