--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
       <form>
         <h1 class="cover-heading">Search The WWWs</h1>
-        <input type="text" id="webSearch" value="">
-        <input type="button" value="Search" onclick="searchTheWeb()" />
+        <input class="search" type="text" id="webSearch" value="">
+        <input class="search" type="button" value="Search" onclick="searchTheWeb()" />
         <input type="submit" style="display: none" onclick="searchTheWeb()" />
       </form>
 
