Add github under working

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
         <p> 
           <a href="https://nmhu.desire2learn.com/d2l/login">Desire</a> 
         </p>
-
+        <p>
+          <a href="https://github.com/">Github</a>
+        </p>
       </div>       
     </div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
